# TODOAPP_cli

./: Cargo.toml  README.md
src/: config.rs  date_format.rs  error.rs  main.rs  routes.rs
src/controller/: Category.rs  category.rs  login.rs  mod.rs  register.rs  todo.rs  todos.rs  user.rs
src/models/: category_model.rs  error_response.rs  mod.rs  todo_model.rs  user_model.rs
src/security/: token.rs
src/view/: main_panel.rs
