[package]
name = "todoapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.21.1"
cursive-aligned-view = "0.7.0"
http = "1.1.0"
once_cell = "1.17.1"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.31"


[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
